--- a/css/styles.css
+++ b/css/styles.css
@@ -254,8 +254,6 @@ a {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-color-grey);
-  /* margin-top: 10px; */
-  /* margin-bottom: 30px; */
 }
 .description-cart {
   padding: 30px 0px;
@@ -343,6 +341,8 @@ a {
 }
 .description-work {
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0px;
 }
 .works-title {
   font-weight: 700;
