--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,17 @@ a {
 }
 
 /*-------- HEADER --------*/
+.header-list {
+  display: flex;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-contacts {
+  display: flex;
+  margin-left: auto;
+}
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -90,40 +101,25 @@ a {
   color: var(--accent-color);
   padding-top: 24px;
   padding-bottom: 25px;
-  margin-right: 93px;
 }
 .logo-text-header {
   color: var(--text-color-major-dark);
 }
-.header-container {
-  display: flex;
-  align-items: center;
-}
-/* .header-navigation {
-  display: flex;
-  align-items: center;
-} */
-.header-list {
-  display: flex;
-}
-.header-contacts {
-  display: flex;
-}
-.header-contacts-wraper {
-  display: flex;
-  margin-left: auto;
+.header-navigation {
+  margin-left: 93px;
 }
 .header-link {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  /* margin-right: 50px; */
+  margin: 0;
 }
-.item {
-  margin-right: 50px;
+.item:not(:first-child) {
+  margin-left: 50px;
 }
 .nav {
   color: var(--text-color-major-dark);
@@ -144,7 +140,7 @@ a {
 /* hero */
 .hero {
   background-color: var(--bg-black-color);
-  padding: 200px;
+  padding: 200px 0px;
   text-align: center;
 }
 .hero-title {
@@ -156,7 +152,7 @@ a {
   text-transform: uppercase;
   color: var(--text-color-major-white);
   width: 696px;
-  margin: 0 auto;
+  margin: 0px auto 30px auto;
   /* margin-bottom: 30px; */
 }
 .hero-button {
@@ -172,7 +168,7 @@ a {
   border: 0;
   border-radius: 4px;
   padding: 10px 32px;
-  margin-top: 30px;
+  /* margin: 0; */
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -187,7 +183,7 @@ a {
   display: flex;
 }
 .features-item {
-  min-width: 270px;
+  width: 270px;
 }
 .features-item + .features-item {
   margin-left: 30px;
@@ -208,6 +204,9 @@ a {
   color: var(--text-color-grey);
 }
 /* presentation */
+.presentation {
+  padding-top: 0;
+}
 .presentation-title {
   margin-bottom: 50px;
 }
@@ -275,8 +274,11 @@ a {
 .logo-text-footer {
   color: var(--text-color-major-white);
 }
-.footer-list {
-  margin-top: 20px;
+.footer-list-item {
+  margin-bottom: 9px;
+}
+.footer-list-item:last-child {
+  margin-bottom: 0;
 }
 .footer-address {
   font-style: normal;
@@ -302,6 +304,9 @@ a {
   justify-content: center;
   margin-bottom: 50px;
 }
+.filters-list-item + .filters-list-item {
+  margin-left: 8px;
+}
 .filters-btn {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -315,7 +320,6 @@ a {
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
-  margin-right: 8px;
 }
 
 .current-btn {
@@ -334,7 +338,7 @@ a {
 }
 .works-item {
   margin-left: 30px;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 .works-item:nth-child(3n + 1) {
   margin-left: 0;
